# hyprland-qt-support

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix
cmake/: install-qml-module.cmake
nix/: default.nix  overlays.nix  shell.nix
qml/: Tester.qml
qml/GlobalSettings/: GlobalSettings.qml
qml/Settings/: SettingsCategory.qml
qml/SidePanel/: SideButton.qml  SideCategoryMarker.qml  SideSeparator.qml  SideTitle.qml
qml/ui/: CheckboxValue.qml  ComboValue.qml  ShortTextValue.qml  SliderValue.qml  SpinValue.qml
src/style/: Button.qml  CMakeLists.txt  CheckBox.qml  TextField.qml  ToolButton.qml  plugin.cpp
src/style/impl/: CMakeLists.txt  HyprlandStyle.qml  MotionBehavior.qml  checkdelegate.cpp  checkdelegate.hpp  hyprlandstyle.cpp  hyprlandstyle.hpp
src/style/test/: CMakeLists.txt  main.cpp  main.qml
